--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="col-md-4">
+<!-- <div class="col-md-4">
   <h1>A great site is coming </h1>
   <p>This will be better than you have ever seen.</p>
 </div>
@@ -9,4 +9,6 @@
 <div class="col-md-4">
   <h1>Why Not Get Ready?</h1>
   <p>You will appreciate what you see. I guarantee it.</p>
-</div>
+</div> -->
+
+<router-outlet></router-outlet>
