--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
-@import "./responsive.css";
+/* @import "./responsive.css";
 @import "./colors.css";
-@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap"); */
 
 body {
     font-family: "Ubuntu", sans-serif;
+}
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.mat-form-field-flex {
+    background-color: #ffffff !important;
 }
